--- a/iot-pract/p.css
+++ b/iot-pract/p.css
@@ -130,9 +130,14 @@ h1{
     text-align: center;
 
   }
-
+  img{
+    height: 400px;
+  }
 @media (max-width: 400px) {
   .text-boxes .text-box button {
     width: 100%;
+  }
+  img{
+    height: 220px;
   }
 }
